src/main/java/com/example/Rental/Errors/OutOfStockException.java
package com.example.Rental.Errors;


public class OutOfStockException extends RuntimeException {
    public OutOfStockException(String message) {
        super(message);
    }

}
